# aio-request

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
aio_request/: __init__.py  aiohttp.py  base.py  circuit_breaker.py  client.py  context.py  deadline.py  deadline_provider.py  delays_provider.py  deprecated.py  endpoint_provider.py  exceptions.py  httpx.py  metrics.py  metrics_collector.py  models.py  opentelemetry.py  percentile_based_request_attempt_delays_provider.py  pipeline.py  priority.py  prometheus.py  request.py  request_attempt_delays_provider.py  request_response_observer.py  request_sender.py  request_strategy.py  requests.py  response_classifier.py  setup.py  strategy.py  tracing.py  transport.py  utils.py
example/: main.py  requirements.txt
tests/: conftest.py  test_aiohttp.py  test_aiohttp_middleware.py  test_aiohttp_redirects.py  test_aiohttp_resolver.py  test_aiohttp_transport.py  test_base.py  test_circuit_breaker.py  test_deadline.py  test_deadline_provider.py  test_delays.py  test_delays_provider.py  test_delegate_endpoint_provider.py  test_forking_strategy.py  test_max_concurrency_strategy.py  test_parallel_strategy.py  test_percentile_based_request_attempt_delays_provider.py  test_pipeline.py  test_prometheus.py  test_request.py  test_response_classifier.py  test_retry_until_deadline_expired_strategy.py  test_sequential_strategy.py  test_setup.py  test_transport.py  test_utils.py  test_version.py
