[project]
name = "aio-request"
version = "0.2.6a1"
description = "Various strategies for sending requests"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Iurii Pliner", email = "yury@anna.money"}]
requires-python = ">=3.11"
dependencies = [
    "multidict>=4.5,<7.0",
    "yarl>=1.12.0,<2.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/anna-money/aio-request"

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-aiohttp==1.1.0",
    "pytest-httpbin==2.1.0",
    "ruff==0.14.7",
    "pyright==1.1.407",
    "aiohttp==3.13.2",
    "tdigest==0.5.2.2",
    "httpx==0.28.1",
    "prometheus-client==0.23.1",
    "opentelemetry-api>=1.27",
    "opentelemetry-semantic-conventions",
    "opentelemetry-exporter-prometheus",
    "opentelemetry-instrumentation-aiohttp-client",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aio_request"]

[tool.pytest.ini_options]
norecursedirs = [".git", ".venv"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["SIM", "C4", "ANN", "N", "LOG", "G", "F", "E", "W", "Q", "I", "UP", "T20", "COM", "RSE", "RET", "ISC", "ASYNC", "SLOT", "RUF", "DTZ"]
ignore = ["COM812", "ISC001", "ASYNC109", "RUF018", "RUF022", "ANN401", "ANN204", "E501"]


[tool.pyright]
include = ["aio_request", "tests"]
pythonVersion = "3.11"
pythonPlatform = "All"
stubPath = ""
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportPrivateImportUsage = false
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUntypedFunctionDecorator = false
reportUnusedImport = false
reportMissingTypeArgument = false
reportImportCycles = false
reportDeprecated = false